--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,12 +1,11 @@
 body {
-  background: #f4f7fa;
+  background: #dfe4e9;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-}
-
-#root {
-  height: 100%;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
 
 form {
