--- a/client/src/components/Category/category.css
+++ b/client/src/components/Category/category.css
@@ -2,15 +2,28 @@
   display: flex;
   margin: 10% 0 0 5%;
   flex-direction: column;
+  z-index: 1;
 }
 
 .category-list__button {
+  cursor: pointer;
   color: white;
   text-decoration: none;
   padding: 12px;
   margin: 4px;
   border-radius: 3px;
   background: rgb(64, 199, 129);
+  transition: 0.2s;
+}
+
+.category-list-cancel__button {
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  padding: 12px;
+  margin: 4px;
+  border-radius: 3px;
+  background: rgb(173, 7, 7);
   transition: 0.2s;
 }
 
