--- a/client/src/components/Form/authentication.css
+++ b/client/src/components/Form/authentication.css
@@ -1,23 +1,19 @@
-.authentication-form {
-  margin: 0 auto;
-  width: 25%;
-  background-color: #0e101c;
-  border-radius: 4px;
+.ant-card-head-title {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
-.authentication-form__text {
-  margin-left: 15%;
-  display: block;
+.login-footer-text {
+  text-align: center;
+  font-family: sans-serif;
 }
 
-.auth {
-  display: table;
-  height: 100%;
-  left: auto;
-  margin: 0;
-  position: relative;
-  top: auto;
-  width: 100%;
-  vertical-align: middle;
-  margin-top: 10%;
+.ant-form-item-control-input {
+  width: 300px;
+}
+
+.ant-card-bordered {
+  width: 30%;
+  margin: 5% auto 0 auto !important;
 }
