--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -23,3 +23,11 @@
   justify-content: flex-start;
   margin-top: 5%;
 }
+
+.ant-menu-overflow {
+  justify-content: flex-end;
+}
+
+.ant-menu-horizontal {
+  background: #f0f2f5 !important;
+}
