--- a/client/src/components/Administrator/Adminpanel.css
+++ b/client/src/components/Administrator/Adminpanel.css
@@ -1,79 +1,3 @@
-.admin-panel-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 10%;
-}
-
-.administrator-table {
-  border-radius: 4px;
-  border: 1px solid black;
-  padding: 5px;
-  background-color: #8080802b;
-}
-
-.admin-tools {
-  border: 1px solid;
-  border-radius: 4px;
-  margin: 0 40px 0 0;
-  padding: 15px;
-  background-color: gray;
-}
-
-.admin-tools-label-name {
-  color: black;
-  font-weight: 600;
-  text-align: center;
-}
-
-td {
-  padding: 5px;
-  border: 1px solid #000000;
-  text-align: center;
-}
-
-th {
-  padding: 5px;
-  border: 1px solid #000000;
-}
-
-.admin-tools-btns {
-  display: flex;
-}
-
-.form-submit-admin__btn {
-  cursor: pointer;
-  padding: 5px;
-  text-transform: lowercase !important;
-  margin: 0 auto !important;
-  height: 35px !important;
-  letter-spacing: 2px !important;
-}
-
-.form-cancel-admin__btn {
-  cursor: pointer;
-  padding: 5px;
-  text-transform: lowercase !important;
-  margin: 0 auto !important;
-  height: 35px !important;
-  letter-spacing: 2px !important;
-  background: lightcoral;
-
-}
-
-.form-cancel-admin__btn:hover {
-  background-color: #c21010;
-}
-
-.edit-btn__btn,
-.delete-btn__btn {
-  cursor: pointer;
-  display: inline;
-  border: 1px solid #333;
-  padding: 5px;
-  border-radius: 4px;
-  margin: 2px;
-}
-
 .admin-select {
   display: block;
   font-size: 16px;
@@ -117,4 +41,32 @@ th {
 :root:lang(iw) .select-css {
   background-position: left 0.7em top 50%, 0 0;
   padding: 0.6em 0.8em 0.5em 1.4em;
+}
+
+/*antd*/
+
+.admin-tools-button {
+  display: flex;
+  justify-content: center;
+}
+
+.admin-tools-btn:nth-child(1) {
+  margin: 0 10px 0 0;
+}
+
+.admin-tools {
+  margin: 0 0 0 20%;
+  border: 1px solid white;
+  padding: 3%;
+  border-radius: 10px;
+  width: 50%;
+  background: ghostwhite;
+}
+
+.ant-table-wrapper {
+  margin: 0 0 0 -10%;
+}
+
+.admin-tools-panel {
+  margin: 5% 0 0 0;
 }
