--- a/client/src/components/Form/authentication.css
+++ b/client/src/components/Form/authentication.css
@@ -57,10 +57,6 @@
   background-color: #e5e6e9;
 }
 
-.ant-btn.form__button {
-  margin-left: 0px;
-}
-
 .ant-btn {
   margin: 0 0 0 60px;
 }
@@ -72,6 +68,114 @@
 
 .input {
   margin: 0 0 0 18px;
+}
+
+.form__button {
+  font-family: sans-serif;
+  text-align: center;
+  border-radius: 4px;
+  border: none;
+  letter-spacing: 1px;
+  background: #40414d;
+  border-color: #40414d;
+  color: white;
+}
+
+.form__button-link {
+  border: none;
+  background: transparent;
+  margin: 0 0 0 60px;
+  color: #1890ff;
+}
+
+.button_size_m {
+  font-size: 14px;
+  padding: 4px 15px;
+}
+
+.button_active {
+  cursor: pointer;
+}
+
+.button_hovered:hover {
+  border-color: #1890ff;
+  background: #1890ff;
+  transition: all 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+.popup {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 250px;
+  top: 50px;
+  right: 50px;
+  max-width: calc(100vw - 24px * 2);
+  position: fixed;
+  z-index: 1010;
+  margin-right: 24px;
+}
+
+.popup__content {
+  background: #fff;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.popup__text {
+  display: block;
+  position: relative;
+  padding: 16px 24px;
+  overflow: hidden;
+  line-height: 1.5715;
+  word-wrap: break-word;
+  background: #fff;
+  text-align: center;
+}
+
+.popup__icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.popup__info_icon {
+  position: relative;
+  font-size: 20px;
+  z-index: 1;
+  top: 5px;
+  left: 5px;
+}
+
+.popup__close_icon {
+  font-size: 20px;
+  top: 5px;
+  z-index: 1;
+  left: -5px;
+  position: relative;
+}
+
+.popup_active {
+  opacity: 0;
+  animation: popup 0.5s forwards;
+}
+
+.popup_inactive {
+  opacity: 0;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.form__button-link:hover {
+  color: #4484fa;
+  transition: all 0.2s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 .form__header-text {
