--- a/client/src/components/TextField/TextField.css
+++ b/client/src/components/TextField/TextField.css
@@ -3,50 +3,57 @@
 .form__username,
 .form__confirm-password {
   border-radius: 2px;
-  font-family: Verdana;
+  font-family: "Jost", sans-serif;
   border: none;
   outline: none;
-}
-
-.form__confirm-password {
-  margin: 0 0 0 20px;
+  line-height: 1.65;
 }
 
 .form__area {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin-bottom: 25px;
   position: relative;
 }
 
 .form__label {
-  font-size: 14px;
-  font-weight: 600;
-  color: #40414d;
-  font-family: Verdana;
-  position: absolute;
-  left: -60px;
+  display: none;
 }
 
 .form__text-error {
   display: block;
   position: fixed;
   color: #ff4949;
-  margin-top: 25px;
-  margin-left: 20px;
-  font-family: sans-serif;
+  margin-top: 28px;
+  font-family: "Jost", sans-serif;
   font-weight: bolder;
 }
 
-.input {
-  margin: 0 0 0 18px;
+input::placeholder {
+  color: #40414d96;
 }
 
 input[type="text"]:focus,
 input[type="password"]:focus {
   outline: none;
-  box-shadow: 0 0 0 3px rgba(0, 191, 255, 0.219);
+  box-shadow: 0 0 0 3px rgb(25 53 171 / 49%);
 }
 
+@media screen and (min-width: 767px) {
+  input::placeholder {
+    font-size: 1rem;
+  }
+  .form__email,
+  .form__password,
+  .form__username,
+  .form__confirm-password {
+    line-height: 1.95;
+    padding: 2px 20px;
+  }
+}
 
-
+@media screen and (min-width: 1366px) {
+  input::placeholder {
+    font-size: 1rem;
+  }
+}
