--- a/client/src/Pages/Basket/basket.css
+++ b/client/src/Pages/Basket/basket.css
@@ -6,9 +6,11 @@
   display: flex;
   flex-direction: row-reverse;
   margin: 58px 0px 0 0;
+  font-family: 'Jost', sans-serif;
 }
 
 .item-text {
   margin: 0 23px 0 0;
   font-family: sans-serif;
+  font-family: 'Jost', sans-serif;
 }
