--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -13,14 +13,13 @@
 .form__button-link {
   border: none;
   background: transparent;
-  margin: 0 0 0 60px;
   color: #1890ff;
-  font-family: Verdana;
+  font-family: "Jost", sans-serif;
 }
 
 .button_size_m {
   font-size: 14px;
-  padding: 4px 15px;
+  padding: 6px 17px;
 }
 
 .button_active {
@@ -36,4 +35,23 @@
 .form__button-link:hover {
   color: #4484fa;
   transition: all 0.2s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+@media screen and (min-width: 767px) {
+  .button_size_m {
+    font-size: 17px;
+    padding: 8px 17px;
+  }
+  .form__button-link {
+    font-size: var(--regular-size-text);
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .button_size_m {
+    font-size: 14px;
+  }
+  .form__button-link {
+    font-size: 1rem;
+  }
 }
